--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-context-menu": "^2.2.15",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-hover-card": "^1.0.6",
@@ -55,10 +56,11 @@
     "embla-carousel-react": "^8.0.0",
     "input-otp": "^1.2.2",
     "lucide-react": "^0.263.1",
+    "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-day-picker": "^8.8.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.4",
+    "react-hook-form": "^7.62.0",
     "react-resizable-panels": "^0.0.55",
     "recharts": "^2.8.0",
     "sonner": "^1.0.3",
