working docker compose

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   backend-dev:
     build:
@@ -9,13 +7,12 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_URL=sqlite:///./demo_uploader.db
+      - DATABASE_URL=sqlite:///./data/demo_uploader.db
       - SECRET_KEY=dev-secret-key-not-for-production
-      - UPLOAD_DIR=/app/uploads
+      - UPLOAD_DIR=/app/data
     volumes:
       - ./backend:/app
       - ./data:/app/data
-      - backend_uploads_dev:/app/uploads
     networks:
       - demo-uppy-dev-network
     restart: unless-stopped
@@ -38,10 +35,6 @@ services:
     restart: unless-stopped
     depends_on:
       - backend-dev
-
-volumes:
-  backend_uploads_dev:
-    driver: local
 
 networks:
   demo-uppy-dev-network:
