--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   backend:
     build:
@@ -9,12 +7,11 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_URL=sqlite:///./demo_uploader.db
+      - DATABASE_URL=sqlite:///./data/demo_uploader.db
       - SECRET_KEY=your-secret-key-change-in-production
-      - UPLOAD_DIR=/app/uploads
+      - UPLOAD_DIR=/app/data
     volumes:
       - ./data:/app/data
-      - backend_uploads:/app/uploads
     networks:
       - demo-uppy-network
     restart: unless-stopped
@@ -41,10 +38,6 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-
-volumes:
-  backend_uploads:
-    driver: local
 
 networks:
   demo-uppy-network:
