--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -7,6 +7,9 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
+# TODO: RESOLVE SELF SIGNED CERT ISSUE
+RUN npm config set strict-ssl false
+
 # Install dependencies
 RUN npm ci
 
