--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,3 +13,10 @@ dependencies = [
     "sqlalchemy>=2.0.42",
     "uvicorn>=0.35.0",
 ]
+
+[dependency-groups]
+dev = [
+    "mypy>=1.17.1",
+    "pre-commit>=4.3.0",
+    "ruff>=0.12.8",
+]
