--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,18 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    container_name: demo-uppy-backend
+    container_name: ${BACKEND_CONTAINER_NAME:-demo-uppy-backend}
     ports:
-      - "8000:8000"
+      - "${BACKEND_PORT:-8000}:8000"
     environment:
-      - DATABASE_URL=sqlite:///./data/demo_uploader.db
-      - SECRET_KEY=your-secret-key-change-in-production
-      - UPLOAD_DIR=/app/data
+      - DATABASE_URL=${DATABASE_URL:-sqlite:///./data/demo_uploader.db}
+      - SECRET_KEY=${SECRET_KEY:-your-secret-key-change-in-production}
+      - UPLOAD_DIR=${UPLOAD_DIR:-/app/data}
+      - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES:-30}
     volumes:
       - ./data:/app/data
     networks:
-      - demo-uppy-network
+      - ${NETWORK_NAME:-demo-uppy-network}
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/api/health"]
@@ -25,13 +26,18 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-    container_name: demo-uppy-frontend
+    container_name: ${FRONTEND_CONTAINER_NAME:-demo-uppy-frontend}
     ports:
-      - "3000:80"
+      - "${FRONTEND_PORT:-3000}:80"
+    environment:
+      - VITE_API_URL=${API_BASE_URL:-http://localhost:8000}
+      - VITE_MAX_FILE_SIZE_MB=${MAX_FILE_SIZE_MB:-10000}
+      - VITE_MAX_FILES=${MAX_FILES:-15}
+      - VITE_CHUNK_SIZE_MB=${CHUNK_SIZE_MB:-1}
     depends_on:
       - backend
     networks:
-      - demo-uppy-network
+      - ${NETWORK_NAME:-demo-uppy-network}
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost/"]
@@ -40,5 +46,5 @@ services:
       retries: 3
 
 networks:
-  demo-uppy-network:
+  ${NETWORK_NAME:-demo-uppy-network}:
     driver: bridge
