--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,17 @@ services:
       - SECRET_KEY=${SECRET_KEY:-your-secret-key-change-in-production}
       - UPLOAD_DIR=${UPLOAD_DIR:-/app/data}
       - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES:-30}
+      - CORS_ORIGINS=${CORS_ORIGINS:-http://localhost:3000,http://localhost:5173,http://localhost:80}
+      - DEMO_ADMIN_EMAIL=${DEMO_ADMIN_EMAIL}
+      - DEMO_ADMIN_NAME=${DEMO_ADMIN_NAME}
+      - DEMO_ADMIN_PASSWORD=${DEMO_ADMIN_PASSWORD}
+      - DEMO_USER_EMAIL=${DEMO_USER_EMAIL}
+      - DEMO_USER_NAME=${DEMO_USER_NAME}
+      - DEMO_USER_PASSWORD=${DEMO_USER_PASSWORD}
+      - DEMO_STORAGE_ACCOUNT_NAME=${DEMO_STORAGE_ACCOUNT_NAME}
+      - DEMO_STORAGE_LOCATION=${DEMO_STORAGE_LOCATION}
+      - DEMO_CONTAINER_USER=${DEMO_CONTAINER_USER}
+      - DEMO_CONTAINER_ADMIN=${DEMO_CONTAINER_ADMIN}
     volumes:
       - ./data:/app/data
     networks:
@@ -34,6 +45,11 @@ services:
       - VITE_MAX_FILE_SIZE_MB=${MAX_FILE_SIZE_MB:-10000}
       - VITE_MAX_FILES=${MAX_FILES:-15}
       - VITE_CHUNK_SIZE_MB=${CHUNK_SIZE_MB:-1}
+      - VITE_API_TIMEOUT=${VITE_API_TIMEOUT:-30000}
+      - VITE_DEMO_USER_EMAIL=${VITE_DEMO_USER_EMAIL}
+      - VITE_DEMO_USER_NAME=${VITE_DEMO_USER_NAME}
+      - VITE_DEMO_ADMIN_EMAIL=${VITE_DEMO_ADMIN_EMAIL}
+      - VITE_DEMO_ADMIN_NAME=${VITE_DEMO_ADMIN_NAME}
     depends_on:
       - backend
     networks:
