poperly pull from api

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -23,11 +23,8 @@ services:
       - DEMO_USER_PASSWORD=${DEMO_USER_PASSWORD}
       - DEMO_STORAGE_ACCOUNT_NAME=${DEMO_STORAGE_ACCOUNT_NAME}
       - DEMO_STORAGE_LOCATION=${DEMO_STORAGE_LOCATION}
-      - DEMO_CONTAINER_USER=${DEMO_CONTAINER_USER}
-      - DEMO_CONTAINER_ADMIN=${DEMO_CONTAINER_ADMIN}
+      - DEMO_CONTAINER=${DEMO_CONTAINER}
       - DEMO_STORAGE_LOCATION=${DEMO_STORAGE_LOCATION}
-      - DEMO_CONTAINER_USER=${DEMO_CONTAINER_USER}
-      - DEMO_CONTAINER_ADMIN=${DEMO_CONTAINER_ADMIN}
     volumes:
       - ./backend:/app
       - ./data:/app/data
