--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,7 @@ services:
       - DEMO_USER_PASSWORD=${DEMO_USER_PASSWORD}
       - DEMO_STORAGE_ACCOUNT_NAME=${DEMO_STORAGE_ACCOUNT_NAME}
       - DEMO_STORAGE_LOCATION=${DEMO_STORAGE_LOCATION}
-      - DEMO_CONTAINER_USER=${DEMO_CONTAINER_USER}
-      - DEMO_CONTAINER_ADMIN=${DEMO_CONTAINER_ADMIN}
+      - DEMO_CONTAINER=${DEMO_CONTAINER}
     volumes:
       - ./data:/app/data
     networks:
