--- a/.env.example
+++ b/.env.example
@@ -34,12 +34,11 @@ CORS_ORIGINS=http://localhost:3000,http://localhost:5173,http://localhost:80
 DEMO_ADMIN_EMAIL=admin@example.com
 DEMO_ADMIN_NAME=System Administrator
 DEMO_ADMIN_PASSWORD=temporary123
-DEMO_USER_EMAIL=user@example.com
+DEMO_USER_EMAIL=demo@example.com
 DEMO_USER_NAME=Demo User
 DEMO_USER_PASSWORD=temporary123
 
 # Azure Storage Demo Configuration
 DEMO_STORAGE_ACCOUNT_NAME=saName
 DEMO_STORAGE_LOCATION=Central US 2
-DEMO_CONTAINER_USER=user-uploads
-DEMO_CONTAINER_ADMIN=admin-uploads
+DEMO_CONTAINER=user-uploads
